# GestorIoT

./: CMakeLists.txt  Doxyfile  databasemanager.cpp  databasemanager.h  devicewindow.cpp  devicewindow.h  devicewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
